Update page width to be more dynamic Switched from % margins to using max-width and auto margins to avoid excess margins on narrow windows.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 body {
     height: 100vh;
-    margin: 0 20%;
+    max-width: 980px;
+    margin: 0 auto;
     overflow: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
